<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignUpForm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="username_text">Username: </string>
    <string name="username_hint">Please enter your username</string>
    <string name="password_text">Password: </string>
    <string name="password_hint">Please enter your password</string>
    <string name="password2_text">Confirm password: </string>
    <string name="password2_hint">Please confirm your password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="welcome">%1$s is created.</string>


</resources>
